--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
             <version>1.1.0</version>
             <classifier>hadoop2</classifier>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
 </project>
